# titanhunt

./: .gitignore  CLAUDE.md  Cargo.toml  netlify.toml  package-lock.json
atlases/: Reaver_Titan.json  baneblade.json  black_legion.json  shadowsword.json  shadowsword3.json
titan-hunt-client/: index.html  package-lock.json  package.json  vite.config.ts
titan-hunt-client/public/atlases/: Angel_Absolution.json  Warlord_Titan.json  krieg.json  manifest.json  shadowsword2.json  world_eater.json
titan-hunt-client/public/terrain/maps/: aerobase_1_16x17.json  aerobase_2_16x17.json  badlands_1_16x17.json  badlands_2_16x17.json  barren_lands_1_16x17.json  barren_lands_2_16x17.json  battletech_16x17.json  city_ruins_16x17.json  citytech_16x17.json  desert_hills_16x17.json  desert_hills_2_16x17.json  desert_runway_16x17.json  deserts_bfm_64x34.json  grasslands_foothills_16x17.json  grasslands_foothills_2_16x17.json  grasslands_forward_base_16x17.json  grasslands_lakes_16x17.json  grasslands_open_terrain_2_16x17.json  grasslands_open_terrain_3_16x17.json  grasslands_river_commcenter_16x17.json  grasslands_rolling_hills_1_16x17.json  (+18 more)
titan-hunt-client/src/: main.ts  types.ts
titan-hunt-client/src/hex/: HexUtils.ts
titan-hunt-client/src/scenes/: BattleScene.ts  BootScene.ts
titan-hunt-client/src/terrain/: MapLoader.ts
titan-hunt-client/src/wasm/: package.json  titan_hunt_core.d.ts  titan_hunt_core.js  titan_hunt_core_bg.wasm  titan_hunt_core_bg.wasm.d.ts
titan-hunt-core/: Cargo.toml
titan-hunt-core/src/: hex.rs  lib.rs  movement.rs  rules.rs  wasm_api.rs
(+38 files in other folders)
