[package]
name = "titan-hunt-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core game logic for Titan Hunt - a 40K inspired hex-based tactical game"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
